classDiagram
    class "IPersonsService" {
        +PersonResponse AddPerson(PersonAddRequest? personAddRequest)
        +List~PersonResponse~ GetAllPersons()
    }
    class "PersonsService" {
        -List~Person~ _persons
        -ICountriesService _countriesService
        +PersonsService()
        +PersonResponse AddPerson(PersonAddRequest? personAddRequest)
        +List~PersonResponse~ GetAllPersons()
        -PersonResponse ConvertPersonToPersonResponse(Person person)
    }
    class "Person" {
        +Guid PersonID
        +string? PersonName
        +Guid CountryID
    }
    class "PersonAddRequest" {
        +string? PersonName
        +Guid CountryID
        +Person ToPerson()
    }
    class "PersonResponse" {
        +Guid PersonID
        +string? PersonName
        +string? Country
    }

    IPersonsService <|.. PersonsService
    PersonsService --> Person
    PersonsService --> PersonAddRequest
    PersonsService --> PersonResponse
    PersonsService --> ICountriesService
    PersonAddRequest --> Person
    Person --> PersonResponse